fix bug dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -264,6 +264,7 @@ button {
   font-size: 1.6rem;
   line-height: 162.5%;
   color: var(--text-color);
+  text-align: justify;
 }
 
 .modal {
@@ -279,6 +280,7 @@ button {
 .modal.show {
   opacity: 1;
   visibility: visible;
+  z-index: 9999;
 }
 .modal__container {
   position: absolute;
@@ -316,6 +318,9 @@ html.dark {
   --body-bg: #292e39;
   --header-bg: #171c28;
   --header-border: rgba(255 255 255 / 10%);
+  --header-bar-filter: brightness(0) saturate(100%) invert(100%) sepia(0%)
+    saturate(0%) hue-rotate(118deg) brightness(109%) contrast(103%);
+  --toggle-btn-bg: #2e80ce;
   --info-bg: #171c28;
   --icon-filter: brightness(0) saturate(100%) invert(100%) sepia(0%)
     saturate(0%) hue-rotate(200deg) brightness(101%) contrast(102%);
@@ -326,6 +331,9 @@ html {
   --body-bg: #f6f6f6;
   --header-bg: #eee;
   --header-border: rgba(255 255 255 / 10%);
+  --header-bar-filter: brightness(0) saturate(100%) invert(0%) sepia(93%)
+    saturate(0%) hue-rotate(146deg) brightness(97%) contrast(100%);
+  --toggle-btn-bg: #2c3e50;
   --info-bg: #eee;
   --icon-filter: brightness(0) saturate(100%) invert(93%) sepia(18%)
     saturate(5%) hue-rotate(84deg) brightness(87%) contrast(87%);
@@ -365,6 +373,7 @@ html {
   width: 24px;
   height: 24px;
   display: none;
+  filter: var(--header-bar-filter);
 }
 @media (max-width: 767.98px) {
   .header__bar {
@@ -454,17 +463,31 @@ html {
   display: flex;
   align-items: center;
   gap: 8px;
+  display: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #3498db;
+  background: var(--toggle-btn-bg);
   color: white;
   border: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
+.theme-toggle--lg {
+  display: block;
+}
+@media (max-width: 767.98px) {
+  .theme-toggle--lg {
+    display: none;
+  }
+}
+@media (max-width: 767.98px) {
+  .theme-toggle--md {
+    display: block;
+    margin-left: auto;
+  }
+}
 .theme-toggle.dark-mode {
-  background-color: #2c3e50;
   color: #ecf0f1;
 }
 
@@ -577,6 +600,11 @@ html {
 .activiti__img-wrap--tall {
   grid-row: span 2;
 }
+@media (max-width: 575.98px) {
+  .activiti__img-wrap--tall {
+    grid-row: initial;
+  }
+}
 .activiti__img-wrap--wide {
   grid-column: span 2;
   gap: 10px;
@@ -590,6 +618,12 @@ html {
 .activiti__img-wrap--big {
   grid-column: span 2;
   grid-row: span 2;
+}
+@media (max-width: 575.98px) {
+  .activiti__img-wrap--big {
+    grid-column: initial;
+    grid-row: initial;
+  }
 }
 .activiti__img {
   width: 100%;
@@ -609,7 +643,7 @@ html {
   }
 }
 .address__heading {
-  color: #2d3134;
+  color: var(--text-color);
   font-size: 4rem;
   font-weight: 700;
   line-height: 125%;
